hphp/hack/test/typecheck/reactive/mayberx8.php.exp
File "mayberx8.php", line 11, characters 10-57:
Reactive functions can only call other reactive functions. (Typing[4200])
File "mayberx8.php", line 4, characters 10-16:
This function is non-reactive.
File "mayberx8.php", line 11, characters 18-56:
This argument caused function to be non-reactive.
